--- a/src/components.css
+++ b/src/components.css
@@ -150,4 +150,23 @@
     background-color: #F1F6F9;
     color: #394867;
 }
-/* */
+/* Add Task Form */
+#overlay {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+}
+#pop-up {
+    background-color: white;
+    border: 2px solid black;
+    display: block;
+    width: 350px;
+    z-index: 1001;
+}
